feat add mongoose

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,10 @@
-<h2>Hello world! 這是 index</h2>
+<form action="/" method="POST">
+  <div class="input-group mb-3" id="postUrlHere">
+    <span class="input-group-text" id="basic-addon1">輸入網址</span>
+    <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+      aria-describedby="basic-addon1">
+    <a href="/" class="btn btn-primary">產出縮網址</a>
+  </div>
+</form>
+
+{{!-- class="d-flex justify-content-center" --}}
