--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,9 @@
 <form action="/" method="POST">
   <div class="input-group mb-3" id="postUrlHere">
-    <span class="input-group-text" id="basic-addon1">輸入網址</span>
-    <input type="text" class="form-control" placeholder="Username" aria-label="Username"
-      aria-describedby="basic-addon1">
-    <a href="/" class="btn btn-primary">產出縮網址</a>
+    {{!-- <span class="input-group-text" id="basic-addon1">輸入網址</span> --}}
+    <input type="text" class="form-control" name="url" placeholder="在此貼上完整網址" aria-label="想縮短的網址"
+      aria-describedby="basic-addon1" required="required">
+    <button class="btn btn-primary mx-1" type="submit">產出縮網址</button>
   </div>
 </form>
 
