--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,16 +10,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   {{!-- CSS --}}
-  <link rel="stylesheet" href="../../public/stylesheets/style.css">
+  {{!--
+  <link rel="stylesheet" href="../../public/stylesheets/style.css"> --}}
 </head>
 
 <body>
   <nav class="navbar bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt=""
           width="30" height="24" class="d-inline-block align-text-top">
-        Bootstrap
+        午後山丘 短網址產生器
       </a>
     </div>
   </nav>
