feat: modify url shortner function

--- a/views/show.hbs
+++ b/views/show.hbs
@@ -1,3 +1,5 @@
 <div class="alert alert-success mt-5 text-center" role="alert">
-  太棒了！你的網址已經縮短為：{{domain}}{{code}}
+  <span>太棒了！你的網址已經縮短為：</span>
+  <span id="short_url">{{domain}}{{code}}</span>
+  <button class="btn btn-success" onClick="copyFn()">點擊複製（功能即將上線）</button>
 </div>
